<resources>
    <string name="app_name">Pan Registration</string>
    <string name="pan_number">PAN NUMBER</string>
    <string name="logo">S.</string>
    <string name="title">First of the few steps to set you up with a Bank Account.</string>
    <string name="bday">BIRTHDATE</string>
    <string name="next">Next</string>
    <string name="no_pan">I don\'t have a PAN</string>
    <string name="tc">Providing PAN and Date of Birth helps us find and fetch your KYC from a central registry by the Government of India.</string>
</resources>