<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/logo_tv"
        android:text="@string/logo"
        android:textColor="#FF5722"
        android:textSize="26sp"
        android:textStyle="bold"
        android:fontFamily="@font/candal"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="4dp"
        android:layout_marginStart="25dp"/>

    <TextView
        android:id="@+id/title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo_tv"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/candal"
        android:text="@string/title"
        android:textColor="@color/black"
        android:textSize="21sp" />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/pan_tv"
        android:text="@string/pan_number"
        android:textColor="#505050"
        android:textSize="11sp"
        android:letterSpacing="0.08"
        android:fontFamily="sans-serif-medium"
        android:layout_below="@+id/title_tv"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="4dp"
        android:layout_marginStart="25dp"/>

    <EditText
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/pan_edt"
        android:layout_below="@id/pan_tv"
        android:inputType="textCapCharacters"
        android:maxLength="10"
        android:textCursorDrawable="@drawable/black_cursor"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/pan_unselected"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/bday_tv"
        android:text="@string/bday"
        android:textColor="#505050"
        android:textSize="11sp"
        android:letterSpacing="0.08"
        android:fontFamily="sans-serif-medium"
        android:layout_below="@id/pan_edt"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="25dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bday_lay"
        android:orientation="horizontal"
        android:layout_below="@id/bday_tv"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:weightSum="1">

        <EditText
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:id="@+id/date_edt"
            android:layout_weight="0.25"
            android:background="@drawable/bday_unselected"
            android:maxLength="2"
            android:inputType="number"
            android:textCursorDrawable="@drawable/purple_cursor"
            android:layout_marginEnd="25dp"
            android:textAlignment="center"/>

        <EditText
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:id="@+id/month_edt"
            android:layout_weight="0.25"
            android:background="@drawable/bday_unselected"
            android:maxLength="2"
            android:inputType="number"
            android:textCursorDrawable="@drawable/purple_cursor"
            android:layout_marginEnd="25dp"
            android:textAlignment="center"/>

        <EditText
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:id="@+id/year_edt"
            android:layout_weight="0.5"
            android:background="@drawable/bday_unselected"
            android:maxLength="4"
            android:inputType="number"
            android:textCursorDrawable="@drawable/purple_cursor"
            android:layout_marginEnd="25dp"
            android:textAlignment="center"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tc_tv"
        android:text="@string/tc"
        android:textColor="#505050"
        android:textSize="11sp"
        android:letterSpacing="0.08"
        android:fontFamily="sans-serif-light"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="30dp"
        android:layout_above="@id/next_btn"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/next_btn"
        android:text="@string/next"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:layout_above="@id/no_pan_tv"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/no_pan_tv"
        android:text="@string/no_pan"
        android:textColor="#673AB7"
        android:textSize="14sp"
        android:letterSpacing="0.08"
        android:fontFamily="sans-serif-medium"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="5dp"/>

</RelativeLayout>